--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,3 +12,4 @@ jobs:
       - uses: actions/checkout@v1     
       - run: echo Hello actions
       - run: ./exec.bat
+      - run: echo $env:GITHUB_WORKSPACE
