--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 '*.pdfa' filter=lfs diff=lfs merge=lfs -text
 '*.pdf1' filter=lfs diff=lfs merge=lfs -text
+*.pdfz filter=lfs diff=lfs merge=lfs -text
