--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,9 @@ jobs:
   exec-job:
     runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v1     
+      - uses: actions/checkout@v2
+        with:
+          lfs: true    
       - run: echo Hello actions
       - run: ./exec.bat
       - run: echo $env:GITHUB_WORKSPACE
