--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           clean: false
-          lfs: true    
+          lfs: true
+          submodules: true
       - run: echo Hello actions
       - run: ./exec.bat
       - run: echo $env:GITHUB_WORKSPACE
